tests/baselines/reference/nullAssignedToUndefined.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/nullAssignedToUndefined.ts(1,9): error TS2539: Cannot assign to 'undefined' because it is immutable.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/nullAssignedToUndefined.ts (1 errors) ====
    var x = undefined = null; // error
            ~~~~~~~~~
!!! error TS2539: Cannot assign to 'undefined' because it is immutable.
    var y: typeof undefined = null; // ok, widened